# embassy-task-watchdog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  code_open  memory.x
.cargo/: config.toml
embassy-task-watchdog/: CHANGELOG.md  Cargo.toml  build.rs  crates-io.md
embassy-task-watchdog-macros/: CHANGELOG.md  Cargo.toml  crates-io.md
embassy-task-watchdog-macros/src/: lib.rs
embassy-task-watchdog-numtasks/: Cargo.toml  build.rs  crates-io.md
embassy-task-watchdog-numtasks/src/: lib.rs
embassy-task-watchdog/src/: embassy_rp.rs  embassy_stm32.rs  impl_macro.rs  lib.rs  runtime.rs
examples/task-pico/: Cargo.toml
examples/task-pico/.cargo/: config.toml
examples/task-pico/src/: main.rs
examples/task-pico2/: Cargo.toml
examples/task-pico2/.cargo/: config.toml
examples/task-pico2/src/: main.rs
examples/task-stm32/: Cargo.toml
examples/task-stm32/.cargo/: config.toml
examples/task-stm32/src/: main.rs
link/: memory.rp2040-hal.x  memory.rp235x.x
scripts/: README.md  build-all.sh  build-common.sh  build-examples.sh  build-lib.sh  build_examples.sh  clean.sh  docs.sh  flash-async-esp32.sh  flash-async-nrf52840.sh  flash-async-pico.sh  flash-async-pico2.sh  flash-async-stm32f103c8.sh  flash-sync-pico.sh  flash-sync-pico2.sh  fmt.sh  publish.sh
src/: embassy_rp.rs  lib.rs  runtime.rs
