[package]
name = "embassy-task-watchdog"
version = "0.0.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "A robust, flexible watchdog management library for embedded systems that multiplexes multiple task watchdogs into a single hardware watchdog timer, preventing system lockups when tasks fail to respond"
documentation = "https://docs.rs/task-watchdog"
repository = "https://github.com/piersfinlayson/task-watchdog"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "watchdog", "embassy", "rp", "pi pico", "no_std"]
categories = ["embedded", "no-std", "asynchronous", "hardware-support"]

[workspace]
members = [
  "examples/task-pico2",
  "embassy-task-watchdog-macros",
]


[features]
# Default features (none)
default = []

# Use for embassy (async support) for the specified microcontroller 
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]

# Use alongside rp2040/rp2350/stm32/esp32-embassy to add defmt support 
defmt-embassy-rp = [
  "defmt-embassy",
  "embassy-rp/defmt",
  "embassy-executor/executor-thread",
  "embassy-executor/executor-interrupt",
]

# Use defmt logging
defmt = ["dep:defmt"]

# The following features are used internally - do not specify explicitly
defmt-embassy = [
  "dep:defmt",
  "defmt",
  "embassy-executor/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
]

[dependencies]
defmt = { version = "1.0", optional = true }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5" }
embassy-executor = { version = "0.9", features = ["arch-cortex-m"] }
embassy-rp = { version = "0.9", features = [
  "time-driver",
  "unstable-pac",
] }
embassy-embedded-hal = { version = "0.5" }
portable-atomic = { version = "1.10", features = ["critical-section"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
critical-section = { version = "1.2" }
embassy-task-watchdog-macros = { path = "./embassy-task-watchdog-macros" }

[lib]
name = "embassy_task_watchdog"
path = "src/lib.rs"
test = false

[package.metadata.docs.rs]
# Due to limitations in docs.rs, we need to specify features/targets.  This
# means that full documentation for all features won't be provided.
features = ["rp2350a", "rp2350b", "rp2040", "defmt-embassy-rp"]
targets = ["thumbv6m-none-eabi", "thumbv8m.main-none-eabihf"]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
