[package]
name = "embassy-task-watchdog-macros"
version = "0.0.1"
edition = "2024"
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]
description = "Procedural macros for the [`embassy_task_watchdog`] crate."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
embassy-task-watchdog-numtasks = { version = "0.0.1", path = "../embassy-task-watchdog-numtasks" }

[lib]
proc-macro = true