[package]
name = "task-pico2"
version = "0.0.1"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.5", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }

defmt = { version = "1.0", default-features =  false }
defmt-rtt = "1.1"
fixed = "1.23"
fixed-macro = "1.2"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.2"
panic-probe = { version = "1.0", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = { version = "0.9", features = ["defmt"] }
usbd-hid = "0.9"
rand_core = "0.10"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.11", features = ["critical-section"] }
embassy-task-watchdog = { path = "../../", features = ["rp235xa"] }